<resources>
    <string name="app_name">Bill Please</string>
    <string name="billcalc">Bill Calculator</string>
    <string name="amt">Amount</string>
    <string name="enteramt">Enter Amount</string>
    <string name="nopax">Num Of Pax</string>
    <string name="noppl">Enter number of people</string>
    <string name="nosvs">No SVS</string>
    <string name="svs">SVS</string>
    <string name="gst">GST</string>
    <string name="nogst">No GST</string>
    <string name="discount">Discount (%)</string>
    <string name="enterdiscount">Enter Discount</string>
    <string name="cash">Cash</string>
    <string name="payn">PayNow</string>
    <string name="split">Split</string>
    <string name="reset">Reset</string>
    <string name="totalbill">Total Bill:</string>
    <string name="eachpays">Each Pays:</string>
</resources>
