<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
    android:id="@+id/textView4"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:textColor="#ffffff"
    android:background="#169cd6"
    android:text="@string/billcalc"
    android:textStyle="bold"
    android:textSize="30sp"/>

    <TextView
        android:id="@+id/amt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/amt" />

    <EditText
        android:id="@+id/inputamt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="center"
        android:hint="@string/enteramt"
        android:inputType="numberDecimal"
        />

    <TextView
        android:id="@+id/nopax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/nopax" />

    <EditText
        android:id="@+id/inputnopax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="center"
        android:inputType="phone"
        android:hint="@string/noppl" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:context=".MainActivity">

        <ToggleButton
            android:id="@+id/svs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:textColor="#ffffff"
            android:background="#169cd6"
            android:layout_weight="1"
            android:textOn="@string/nosvs"
            android:textOff = "@string/svs"
            />

        <ToggleButton
            android:id="@+id/gst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:background="#169cd6"
            android:layout_weight="1"
            android:textOn="@string/nogst"
            android:textOff="@string/gst" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/discount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/discount" />
        <EditText
            android:id="@+id/inputdiscount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center"
            android:hint="@string/enterdiscount"
            android:inputType="numberDecimal" />


        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbcash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cash" />

            <RadioButton
                android:id="@+id/rbpayn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payn" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:context=".MainActivity">

            <Button
                android:id="@+id/split"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:textColor="#ffffff"
                android:background="#169cd6"
                android:layout_weight="1"
                android:text="@string/split" />

            <Button
                android:id="@+id/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:background="#169cd6"
                android:layout_weight="1"
                android:text="@string/reset" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/totalbill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/totalbill" />

            <TextView
                android:id="@+id/eachpays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/eachpays" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
